DuPont DevSB/src/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt; 4 Stories</fullName>
                </value>
                <value>
                    <fullName>&lt; 5 Stories</fullName>
                </value>
                <value>
                    <fullName>&lt; 5 Stories - Home Owner</fullName>
                </value>
                <value>
                    <fullName>&lt; 6 LowRise/ MultiFamily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the Brand associated with the product.</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand relating to this entitlement.</description>
        <inlineHelpText>Brand relating to this entitlement.</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AEG</fullName>
                </value>
                <value>
                    <fullName>Almillmo</fullName>
                </value>
                <value>
                    <fullName>Alno</fullName>
                </value>
                <value>
                    <fullName>Andere - maatwerk keuken</fullName>
                </value>
                <value>
                    <fullName>Arrital Cucine</fullName>
                </value>
                <value>
                    <fullName>Arthur Bonnet</fullName>
                </value>
                <value>
                    <fullName>Aucune</fullName>
                </value>
                <value>
                    <fullName>Autre - Sur mesure</fullName>
                </value>
                <value>
                    <fullName>Baulthaup</fullName>
                </value>
                <value>
                    <fullName>Berloni</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
                <value>
                    <fullName>Binova</fullName>
                </value>
                <value>
                    <fullName>Blanco</fullName>
                </value>
                <value>
                    <fullName>Boffi</fullName>
                </value>
                <value>
                    <fullName>Bulthaup</fullName>
                </value>
                <value>
                    <fullName>Burbidge</fullName>
                </value>
                <value>
                    <fullName>Callerton</fullName>
                </value>
                <value>
                    <fullName>Cesar Cucine</fullName>
                </value>
                <value>
                    <fullName>Chippendale</fullName>
                </value>
                <value>
                    <fullName>Cliff</fullName>
                </value>
                <value>
                    <fullName>County Kitchens</fullName>
                </value>
                <value>
                    <fullName>Crown</fullName>
                </value>
                <value>
                    <fullName>Cuisinella</fullName>
                </value>
                <value>
                    <fullName>Dada</fullName>
                </value>
                <value>
                    <fullName>Doca</fullName>
                </value>
                <value>
                    <fullName>Doimo Cucine</fullName>
                </value>
                <value>
                    <fullName>Ernestomeda</fullName>
                </value>
                <value>
                    <fullName>Febal</fullName>
                </value>
                <value>
                    <fullName>George Montagu</fullName>
                </value>
                <value>
                    <fullName>Hacker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Residential / Duplex</fullName>
                </value>
                <value>
                    <fullName>Low-rise Multi-family</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Light Commercial</fullName>
                </value>
                <value>
                    <fullName>Heavy Commercial</fullName>
                </value>
                <value>
                    <fullName>Home / Residential</fullName>
                </value>
                <value>
                    <fullName>Mixed Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatorEmail__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>CreatorEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Entitlement_Code__c</fullName>
        <description>Unique Code used to give assurance that a specific product or service will meet specific facts or conditions.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique code used to identify a specific warranty on a product or service.</inlineHelpText>
        <label>Entitlement Code</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remodel</fullName>
                </value>
                <value>
                    <fullName>New Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>ID or reference code from legacy system or system previously used for this data</description>
        <label>Legacy ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lot_Nb__c</fullName>
        <label>Lot Nb</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To capture the Color of entitled Kitchen worktop</description>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Entitlements (Material)</relationshipLabel>
        <relationshipName>Entitlements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <description>Used by System Admin to tag an import dataset to more easily identify for export or removal</description>
        <label>Migration DB ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <label>Other Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary contact for this entitlement, likely the contact that activated this entitlement.</description>
        <inlineHelpText>Primary contact for this entitlement, likely the contact that activated this entitlement.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Answer1__c</fullName>
        <description>Used to capture business specific answers</description>
        <label>Product Answer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Question1__c</fullName>
        <defaultValue>&quot;Products Selected&quot;</defaultValue>
        <description>Used to capture business specific questions</description>
        <label>Product Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Answer1__c</fullName>
        <description>Used to capture business specifc answers</description>
        <label>Reason Answer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Question1__c</fullName>
        <description>Used to capture business specific questions</description>
        <label>Reason Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Type__c</fullName>
        <description>Recommendation concerning the product related to this entitlement</description>
        <inlineHelpText>Recommendation concerning the product related to this entitlement</inlineHelpText>
        <label>Recommendation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Color Recommended</fullName>
                </value>
                <value>
                    <fullName>Color Not Recommended</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>ZZ-Not used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Address__c</fullName>
        <label>Registration Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_City__c</fullName>
        <label>Registration City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Country1__c</fullName>
        <label>Registration Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States1</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BORNEO</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <displayFormat>REG-{MM}-{DD}-{YY}-{000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Registration_Postal_Code__c</fullName>
        <label>Registration Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_State_Province__c</fullName>
        <label>Registration State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Registration_Country1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NewYork</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is how an Account can be related with with this Entitlement.</description>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Answer1__c</fullName>
        <description>Used to capture business specifc answers</description>
        <label>Service Answer</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Question1__c</fullName>
        <description>Used to capture business specific questions</description>
        <label>Service Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Used to indicate the Stage of the Entitlement i.e. whether its in progress or has been completed</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registration In-Progress</fullName>
                </value>
                <value>
                    <fullName>Registration Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WRB_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in BI NA Warranty and Claims</description>
        <label>WRB Only</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Registrations_Active</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Related_Account__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Entitlement_Code__c</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>ENTITLEMENT.STATUSINDICATOR</columns>
        <columns>ENTITLEMENT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_EMEA_Entitlement</value>
        </filters>
        <label>BI-EMEA Registrations (Active)</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAAdmin</group>
            <group>BIEMEACaseSupervisors</group>
            <group>BIEMEAWEItaly</group>
            <group>BIEMEAWarrantyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Registrations_Inactive</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>Entitlement_Code__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Related_Account__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>ENTITLEMENT.STATUSINDICATOR</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.STATUS</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_EMEA_Entitlement</value>
        </filters>
        <label>BI-EMEA Registrations (Inactive)</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEAAdmin</group>
            <group>BIEMEAWEItaly</group>
            <group>BIEMEAWarrantyManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_NA_BE_Entitlements_Warranty</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>ENTITLEMENT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.NAME</columns>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ENTITLEMENT.RECORDTYPE</columns>
        <columns>Stage__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_NA_Env_Product_Labor,Entitlement.BI_NA_Env_Product_Only</value>
        </filters>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_NA_Env_Product_Only_Fluid_Applied</value>
        </filters>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_NA_Env_Product_Only</value>
        </filters>
        <label>BI-NA BE Entitlements (Warranty)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BINA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_NA_Surfaces_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_NA_Surface_Entitlement</value>
        </filters>
        <label>BI-NA Surfaces Entitlements</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BINA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_NA_Surfaces_Open_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.BI_NA_Surface_Entitlement</value>
        </filters>
        <filters>
            <field>ENTITLEMENT.STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BI-NA Surfaces Open Entitlements</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BINA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BI_EMEA_Entitlement</fullName>
        <active>true</active>
        <description>BI-EMEA Entitlement Record Type</description>
        <label>BI-EMEA Entitlement</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Env_Product_Labor</fullName>
        <active>true</active>
        <description>BI-NA Envelopes Entitlements/Registrations Product and Labor Record type</description>
        <label>BI-NA Env Product &amp; Labor</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Env_Product_Labor_Fluid_Applied_WB_w_EIFS</fullName>
        <active>true</active>
        <description>BI-NA Envelopes Entitlements/Registrations Product Only - Fluid Applied WB+ w/EIFS  Record type</description>
        <label>BI-NA Env Product &amp; Labor - Fluid Applied WB+ w/EIFS</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Env_Product_Only</fullName>
        <active>true</active>
        <description>BI-NA Envelopes Entitlements/Registrations Product Only Record type</description>
        <label>BI-NA Env Product Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Env_Product_Only_Fluid_Applied</fullName>
        <active>true</active>
        <description>BI-NA Envelopes Entitlements/Registrations Product Only - Fluid Applied Record type</description>
        <label>BI-NA Env Product Only – Fluid Applied</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Env_Product_Only_Fluid_Applied_WB</fullName>
        <active>true</active>
        <description>BI-NA Envelopes Entitlements/Registrations Product Only - Fluid WB+  Applied Record type</description>
        <label>BI-NA Env Product Only - Fluid Applied WB+</label>
    </recordTypes>
    <recordTypes>
        <fullName>BI_NA_Surface_Entitlement</fullName>
        <active>true</active>
        <description>BI-NA Surfaces Entitlements/Registrations Record type</description>
        <label>BI-NA Surfaces Entitlement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BI_NA_Envelopes_Account_Change</fullName>
        <active>true</active>
        <description>This Validation is for BI NA Account Change</description>
        <errorConditionFormula>IF(AND(OR(RecordType.Name=&apos;Product Only&apos;,RecordType.Name=&apos;Product &amp; Labor&apos;,RecordType.Name=&apos;Product Only - Fluid Applied&apos;),( Account.RecordType.Name !=&apos;BI - Tyvek&apos;)),true,false)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please select a BI Envelopes Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BI_NA_Surface_Account_Change</fullName>
        <active>true</active>
        <description>This Validation is for BI NA Surface Account Change</description>
        <errorConditionFormula>IF(AND (RecordType.Name=&apos;BI-NA Surfaces Entitlement&apos;,( Account.RecordType.Name !=&apos;BI - Surfaces&apos;)),true,false)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please select a BI Surfaces Account</errorMessage>
    </validationRules>
</CustomObject>